src/App.css
body {
  font-family: "Times New Roman";
  margin-left: 0rem;
  background-color: transparent;

}
h1,
h3 {
  text-align: center;
}

img {
  margin-left: auto;
  margin-right: auto;
  max-width: auto;
  max-height: 10rem;
  border-radius: 5px;
}

#Header {
    background: 
  url("https://image.shutterstock.com/image-vector/traditional-indian-paisley-pattern-on-600w-1726867504.jpg")
      no-repeat,
    linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3));
    background-color: #af7fdd;
      border-top: 1px solid #000;
      border-bottom: 1px solid #000;
      margin-bottom: 2rem;    
}

#logo {
  position: absolute;
  top: 0px;
  right: 3.75rem;
  border: 3px solid black;
  height: auto;
}

#banner {
  border: 3px solid black;
  height: 10rem;
  width: 110%;
  background-attachment: fixed;
}

#classWithEitan {
  position: relative;
  border: 4px solid black;
  bottom: .15rem;
}

.accordion {
  /* position:relative; */
  display: block;
  /* position: relative; */
  padding-top: 10px;
  padding-bottom: 5px;
  padding-left: .5rem;
  margin-bottom: 0rem;
  align-items: center;
  /* height: fit-content; */
  /* min-width:82%; */
  background-attachment: fixed;
  background-position: 25% 75%;
  /* width:118%; */
}

.accordion-title {
  font-size: 175%;;
  font-weight: 700;
  -webkit-text-stroke: 0.5px black;
  height: 5.3rem;
  background-clip: text;
  -webkit-background-clip: text;
  color: transparent;
    text-align: left;
    margin-left: 2rem;
}

/* @media all and (max-width: 768px) { 
  .accordion-title {
      font-size: 50px;
  }
} */

#icon:before {
  font-size: 50px;
  font-weight: 700;
  background-clip: text;
  -webkit-background-clip: text;

}

#pie {
  filter: grayscale(1);
}
#pie:hover {
  font-size: 3rem;
  transition: 0.1s;
  border: none;
  cursor: pointer;
  filter: grayscale(0);
}

#icon:after,
#icon:active,
#icon:hover {
  color:red;
    /* align-content: left; */

}

.accordion-title:hover {
  /* font-size: 59px; */
  font-weight: 700;
  background-clip: text;
  -webkit-background-clip: text;
  color: transparent;
  background-attachment: fixed;
    -webkit-text-stroke: 1px rgb(9, 3, 90);

}

.accordion-content {
  -webkit-text-stroke: 1px rgb(9, 3, 90);
  text-align: center;
  font-size: 200%;
  /* width: clamp(1em); */
  }

.ContactForm {
  display: block;
  width: min-content;
  height: 100%;
  margin: auto;
  background-color: rgb(129, 59, 59);
}

.wwClassImage,
.philosophyClassImage,
.classImage {
  /* height: 110%; */
  /* width: max-content; */
  block-size: 75px;
  writing-mode: horizontal-tb;
  position: relative;
  text-align: center;
  float: right;
  margin: 1.25%;
  /* border: 100% double maroon; */
  /* border: 5px solid #555; */
}

.wwClassImage {
  /* block-size: 90px; */
  height: 4.75rem;
  width: 43.75%;
}

.philosophyClassImage {
  height: 4.75rem;
  width: 43.75%;
}

#openCloseSymbols {
  opacity: 0.5;
  float: right;
  padding-right: 2%;
}

.footer {
  text-indent: 7em;
  border-top: 1px solid #000;
  border-bottom: 1px solid #000;
  opacity: 0.85;
    -webkit-text-stroke: 0.15px black;

  background: 
  url("https://image.shutterstock.com/image-vector/traditional-indian-paisley-pattern-on-600w-1726867504.jpg")
      no-repeat,
    linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3)),
    radial-gradient(ellipse at top, #ec008c, transparent),
    radial-gradient(ellipse at bottom, #fc6767, transparent);  
    background-color: #af7fdd;

  margin-top: 1.25rem;
  /* margin-bottom: 1em; */
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
  /* margin-right: -11rem; */
  text-align: center;
  font-size: larger;
  /* width: 100%; */
  /* height: 100%; */
}

@media screen and (max-width: 500px) {
  .footer {
    text-indent: -5em;
    font-size: large;
  }
}

@media all and (max-width: 1260px) {
  .footer {
    text-indent: -10em;
    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3)),
      radial-gradient(ellipse at top, #ec008c, transparent),
      radial-gradient(ellipse at bottom, #fc6767, transparent);
  }
}

.rainbow-paisley-bg, 
#rainbowText,
#eitansProfilePic,
#infoCard,
/* .Calendar, */
#banner,
.accordion,
.accordion-title,
.accordion-title:hover,
.ContactForm {
  background-image: url("https://as2.ftcdn.net/v2/jpg/00/94/53/25/500_F_94532580_XwSK8I03t7oQY246gc6vdeU1wm6q2r8P.jpg");
  background-attachment:fixed;  
}

.black-and-white-paisley-bg,
#EitanInfoBox,
footer {
  background: url("https://image.shutterstock.com/image-vector/traditional-indian-paisley-pattern-on-600w-1726867504.jpg"), no-repeat;
}

#rainbowText::before,
#rainbowText {
  background-clip: text;
  -webkit-background-clip: text;
  color: transparent;
  -webkit-text-stroke: 0.85px black;
  border: 0.2rem solid transparent;
  /* background-attachment:scroll; */
}

#filmColor {
  width: 100%;
  background-color: #39b9d2;
  background: radial-gradient(circle, Magenta 25%, rgb(255, 255, 255) 100%);
  position: absolute, center;
  background-size: 150px;
  background-image: url("https://thumbs.dreamstime.com/z/cinema-seamless-pattern-icons-movie-background-tv-show-television-online-entertainment-concept-film-elements-repeating-251720735.jpg");
  z-index: 15;
}

#filmColor::before {
  content: "";
  background: radial-gradient(circle, Magenta 25%, rgb(255, 255, 255) 100%);
  background-size: cover;
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  opacity: 0.75;
}

#programmingColor {
  background: radial-gradient(circle, #af7fdd 25%, rgb(255, 255, 255) 100%);
  background-size: 200px;
  background-image: url("https://as1.ftcdn.net/v2/jpg/02/38/22/66/1000_F_238226669_2e3HdJV5zB9LKE2RWaWoDN692MLSnv4g.jpg");
  z-index: 15;
}

#programmingColor:before {
  content: "";
  background: radial-gradient(circle, #af7fdd 25%, rgb(255, 255, 255) 100%);
  background-size: cover;
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  opacity: 0.75;
}

#epicsColor {
  background: radial-gradient(circle, Yellow 25%, rgb(255, 255, 255) 100%);

  background-size: 200px;
  background-image: url("https://c8.alamy.com/comp/2GNBWB5/ancient-greece-mythology-history-vector-seamless-pattern-2GNBWB5.jpg");
  z-index: 15;
}

#epicsColor:before {
  content: "";
  background: radial-gradient(circle, Yellow 25%, rgb(255, 255, 255) 100%);
  background-size: cover;
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  opacity: 0.75;
}

#stwColor {
  background: radial-gradient(ellipse at top, #ec008c, transparent),
    radial-gradient(ellipse at bottom, #fc6767, transparent);

  background-size: 200px;
  background-image: url("https://image.shutterstock.com/image-vector/seamless-pattern-survival-people-surviving-600w-500423134.jpg");
}

#stwColor::before {
  content: "";
  background: radial-gradient(circle, #00ff7f 25%, rgb(255, 255, 255) 100%);
  background-size: cover;
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  opacity: 0.75;
}

#wwColor {
  background: radial-gradient(ellipse at top, red, transparent),
    radial-gradient(ellipse at bottom, #fc6767, transparent);

  background-size: 170px;
  background-image: url("https://thumbs.dreamstime.com/z/military-aircraft-pattern-seamless-black-military-aircraft-pattern-repeat-seamless-black-color-any-design-vector-geometric-102903104.jpg");
}

#wwColor::before {
  content: "";
  background: radial-gradient(circle, #f10202d1 25%, rgb(255, 255, 255) 100%);
  background-size: cover;
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  opacity: 0.75;
}

#philosophyColor {
  background-size: 370px;
  background-image: url("https://www.shutterstock.com/image-vector/lamp-light-bulb-hand-drawn-600w-520326277.jpg");
}

#philosophyColor::before {
  content: "";
  background: radial-gradient(circle, #02b5f1d1 25%, rgb(255, 255, 255) 100%);
  background-size: cover;
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  opacity: 0.75;
}

#policingColor {
  background-size: 170px;
  background-image: url("https://www.shutterstock.com/image-vector/police-related-icon-set-outline-600w-1042818226.jpg");
}

#policingColor::before {
  content: "";
  background: radial-gradient(circle, #ff7b00d1 25%, rgb(255, 255, 255) 100%);
  background-size: cover;
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  opacity: 0.75;
}

#financeColor {
  background-size: 170px;
  background-image: url("https://www.shutterstock.com/image-illustration/leather-purse-pattern-repeat-seamless-600w-1106709062.jpg");
}

#financeColor::before {
  content: "";
  background: radial-gradient(circle, #2efa05d1 25%, rgb(255, 255, 255) 100%);
  background-size: cover;
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  opacity: 0.75;
}

a {
  position: relative;
  font-size: 1rem;
  line-height: 0.9;
  text-align: center;
}

#infoCard {
  display: block;
  position: inline;
  margin-bottom: 2.5rem;
  font-size: x-large;
}

#infoCard,
.Calendar {
  display: block;
  /* width: 113%; */
  background-attachment: fixed;
  padding-top: 5px;
  padding-right: 6px;
  padding-bottom: 5px;
  padding-left: 6px;
}

#stwGreen {
  background: radial-gradient(circle, #00ff7f 25%, rgb(255, 255, 255) 100%);
  background-size: 200px;
  z-index: 15;
  opacity: 40%;
}

#speckledPattern {
  font-weight: 700;
  background-clip: text;
  -webkit-background-clip: text;
  color: transparent;
  background-image: url("https://thumbs.dreamstime.com/b/black-small-polka-dot-pattern-repeat-background-seamless-repeats-45645483.jpg");
  -webkit-text-stroke: 1px black;
  background-size: 300px;
}

#EitanInfoBox {
  max-width: 10rem;
  background-position: 80% 80%;
  border: 4px solid black;
  background-position: 90% 5%;
  padding: 4rem;
}

.EitanInfoButtons {
  position:relative;
  /* margin: 0rem; */
  /* margin-right: 12rem; */
}

#eitansProfilePic {
  float: right;
  border: 0.2rem solid transparent;
  background-size: 100rem;
  background-attachment: fixed;
  width: auto;
  margin: 0.5rem;
}

.time,
#shine {
  font-weight: 700;
  background-clip: text;
  -webkit-background-clip: text;
  color: black;
  -webkit-text-stroke: 0.01rem #70c3a5;
}

#nameAndYear {
  color: #70c3a5;
}

.time {
  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3)),
    radial-gradient(ellipse at top, #ec008c, transparent),
    radial-gradient(ellipse at bottom, #fc6767, transparent);
  opacity: 75%;
  margin-bottom: 3rem;
  padding: 2.33rem;
  border: 4px solid black;
  text-align: center;
  background-color: #af7fdd;
}

@media all and (max-width: 895px) {
  .time {    
  padding: 15rem;
 }
}

@media all and (max-width: 1000px) {
  .time {
    text-align: center;
    padding: 0rem;
    margin-bottom: 1rem;
  }
}

#aBAB {
  background: radial-gradient(ellipse at top, yellow, transparent),
    radial-gradient(ellipse at bottom, rgb(3, 249, 110), transparent),
    linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3));

  background-position: 10.95rem;
  background-size: 200px;
  z-index: 15;
  background-clip: text;
  -webkit-background-clip: text;
  color: transparent;
}

#globe {
  transition: 0.1s;
  border: none;
  cursor: pointer;
  filter: grayscale(1);
}

#globe:hover {
  font-size: 2rem;
  transform: scale(1.23);
  filter: grayscale(0);
}

.CourseInterestForm {
  color: #00ff7f;
margin-left: -20rem;
}

#tab3 {
  color: black;
  background-color: #ec008c;
}

